Minor fixes to visibility
Prevents single-line inputs that may have inherited visibility rules from their container question from displaying unexpected layout behaviour.

--- a/Survey/source/styles/_m-question-cover.scss
+++ b/Survey/source/styles/_m-question-cover.scss
@@ -27,7 +27,7 @@
     background-image: none;
 }
 
-.unavailable.collapse {
+.o-question-container.unavailable.collapse {
     display: none;
 }
 
